User endpoint defined. Code improvements.
