# mysite/api/static/openapi-schema.yml
@@ -3,7 +3,7 @@ info:
   title: ''
   version: ''
 paths:
-  /exercises/:
+  /training-plan/api/exercises/:
     get:
       operationId: listExercises
       description: ''
@@ -18,7 +18,7 @@ paths:
                   $ref: '#/components/schemas/Exercise'
           description: ''
       tags:
-      - exercises
+      - training-plan
     post:
       operationId: createExercise
       description: ''
@@ -42,8 +42,8 @@ paths:
                 $ref: '#/components/schemas/Exercise'
           description: ''
       tags:
-      - exercises
-  /exercises/{id}/:
+      - training-plan
+  /training-plan/api/exercises/{id}/:
     get:
       operationId: retrieveExercise
       description: ''
@@ -62,7 +62,7 @@ paths:
                 $ref: '#/components/schemas/Exercise'
           description: ''
       tags:
-      - exercises
+      - training-plan
     put:
       operationId: updateExercise
       description: ''
@@ -92,7 +92,7 @@ paths:
                 $ref: '#/components/schemas/Exercise'
           description: ''
       tags:
-      - exercises
+      - training-plan
     patch:
       operationId: partialUpdateExercise
       description: ''
@@ -122,7 +122,7 @@ paths:
                 $ref: '#/components/schemas/Exercise'
           description: ''
       tags:
-      - exercises
+      - training-plan
     delete:
       operationId: destroyExercise
       description: ''
@@ -137,8 +137,8 @@ paths:
         '204':
           description: ''
       tags:
-      - exercises
-  /trainings/:
+      - training-plan
+  /training-plan/api/trainings/:
     get:
       operationId: listTrainings
       description: ''
@@ -153,7 +153,7 @@ paths:
                   $ref: '#/components/schemas/Training'
           description: ''
       tags:
-      - trainings
+      - training-plan
     post:
       operationId: createTraining
       description: ''
@@ -177,8 +177,8 @@ paths:
                 $ref: '#/components/schemas/Training'
           description: ''
       tags:
-      - trainings
-  /trainings/{id}/:
+      - training-plan
+  /training-plan/api/trainings/{id}/:
     get:
       operationId: retrieveTraining
       description: ''
@@ -186,7 +186,7 @@ paths:
       - name: id
         in: path
         required: true
-        description: A unique integer value identifying this training.
+        description: ''
         schema:
           type: string
       responses:
@@ -197,7 +197,7 @@ paths:
                 $ref: '#/components/schemas/Training'
           description: ''
       tags:
-      - trainings
+      - training-plan
     put:
       operationId: updateTraining
       description: ''
@@ -205,7 +205,7 @@ paths:
       - name: id
         in: path
         required: true
-        description: A unique integer value identifying this training.
+        description: ''
         schema:
           type: string
       requestBody:
@@ -227,7 +227,7 @@ paths:
                 $ref: '#/components/schemas/Training'
           description: ''
       tags:
-      - trainings
+      - training-plan
     patch:
       operationId: partialUpdateTraining
       description: ''
@@ -235,7 +235,7 @@ paths:
       - name: id
         in: path
         required: true
-        description: A unique integer value identifying this training.
+        description: ''
         schema:
           type: string
       requestBody:
@@ -257,7 +257,7 @@ paths:
                 $ref: '#/components/schemas/Training'
           description: ''
       tags:
-      - trainings
+      - training-plan
     delete:
       operationId: destroyTraining
       description: ''
@@ -265,15 +265,15 @@ paths:
       - name: id
         in: path
         required: true
-        description: A unique integer value identifying this training.
+        description: ''
         schema:
           type: string
       responses:
         '204':
           description: ''
       tags:
-      - trainings
-  /training_items/:
+      - training-plan
+  /training-plan/api/training-items/:
     get:
       operationId: listTrainingItems
       description: ''
@@ -288,7 +288,7 @@ paths:
                   $ref: '#/components/schemas/TrainingItem'
           description: ''
       tags:
-      - training-items
+      - training-plan
     post:
       operationId: createTrainingItem
       description: ''
@@ -312,8 +312,8 @@ paths:
                 $ref: '#/components/schemas/TrainingItem'
           description: ''
       tags:
-      - training-items
-  /training_items/{id}/:
+      - training-plan
+  /training-plan/api/training-items/{id}/:
     get:
       operationId: retrieveTrainingItem
       description: ''
@@ -332,7 +332,7 @@ paths:
                 $ref: '#/components/schemas/TrainingItem'
           description: ''
       tags:
-      - training-items
+      - training-plan
     put:
       operationId: updateTrainingItem
       description: ''
@@ -362,7 +362,7 @@ paths:
                 $ref: '#/components/schemas/TrainingItem'
           description: ''
       tags:
-      - training-items
+      - training-plan
     patch:
       operationId: partialUpdateTrainingItem
       description: ''
@@ -392,7 +392,7 @@ paths:
                 $ref: '#/components/schemas/TrainingItem'
           description: ''
       tags:
-      - training-items
+      - training-plan
     delete:
       operationId: destroyTrainingItem
       description: ''
@@ -407,7 +407,78 @@ paths:
         '204':
           description: ''
       tags:
-      - training-items
+      - training-plan
+  /training-plan/api/register/:
+    post:
+      operationId: createRegister
+      description: ''
+      parameters: []
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Register'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/Register'
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/Register'
+      responses:
+        '201':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Register'
+          description: ''
+      tags:
+      - training-plan
+  /training-plan/api/login/:
+    post:
+      operationId: createLogin
+      description: ''
+      parameters: []
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Login'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/Login'
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/Login'
+      responses:
+        '201':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Login'
+          description: ''
+      tags:
+      - training-plan
+  /training-plan/api/logout/:
+    post:
+      operationId: createLogout
+      description: ''
+      parameters: []
+      requestBody:
+        content:
+          application/json:
+            schema: {}
+          application/x-www-form-urlencoded:
+            schema: {}
+          multipart/form-data:
+            schema: {}
+      responses:
+        '201':
+          content:
+            application/json:
+              schema: {}
+          description: ''
+      tags:
+      - training-plan
 components:
   schemas:
     Exercise:
@@ -483,3 +554,36 @@ components:
       - exercise_id
       - training_id
       - reps_count
+    Register:
+      type: object
+      properties:
+        id:
+          type: integer
+          readOnly: true
+        username:
+          type: string
+          description: Required. 150 characters or fewer. Letters, digits and @/./+/-/_
+            only.
+          pattern: ^[\w.@+-]+\z
+          maxLength: 150
+        email:
+          type: string
+          format: email
+          maxLength: 254
+        password:
+          type: string
+          writeOnly: true
+          maxLength: 128
+      required:
+      - username
+      - password
+    Login:
+      type: object
+      properties:
+        username:
+          type: string
+        password:
+          type: string
+      required:
+      - username
+      - password
